--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,42 +64,78 @@ tr.tr-users{
     overflow-y: scroll;
 }
 
-.sensores .card-body {
-    height: 250px;
+.wrapper {
+    background: #f5f5f5;
+    padding: 20px;
+}
+
+.material-switch {
+    display: inline-block;
+    position: relative;
+    width: 46px;
+    height: 17px;
+    margin: 6px 1px;
+}
+.material-switch .material-switch-btn {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    pointer-events: none;
+    opacity: 1;
+    transition: background-color linear .08s;
+    background: rgba(144, 144, 144, 0.2);
+}
+.material-switch .material-switch-btn:after {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: 0;
+    height: 27px;
+    width: 27px;
+    border-radius: 50%;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.6);
+    transition: -webkit-transform linear .08s, background-color linear .08s;
+    transition: transform linear .08s, background-color linear .08s;
+    will-change: transform;
+    background-color: #909090;
+    cursor: pointer;
+}
+.material-switch .material-switch-toggle {
+    opacity: 0;
+    position: absolute;
+    margin: 0;
+    z-index: -1;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    left: 0;
+    pointer-events: none;
+}
+.material-switch .material-switch-toggle:checked + .material-switch-btn:after {
+    transform: translateX(20px);
+    background-color: #4285f4;
+    box-shadow: 0 1px 5px 0 rgba(66, 133, 244, 0.6);
+}
+
+.imgSensor {
+    width: 25px;
+    height: 25px;
 }
 
 
 
+.text--btm {
+    font-size: 12px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.nt{
+    position: absolute;
+    left: 14px;
+    top:0px;
+}
 
 
 
