--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,8 @@ tr.tr-users{
 .wrapper {
     background: #f5f5f5;
     padding: 20px;
+    border-radius: 4px;
+    margin-bottom: 10px;
 }
 
 .material-switch {
@@ -137,14 +139,36 @@ tr.tr-users{
     top:0px;
 }
 
+.blocked {
+    display: none;
+}
 
+/*animations*/
 
+.loading-overlay-shown {
+    overflow: hidden;
+}
+.loading-overlay-shown body {
+    overflow: hidden;
+}
 
-
-
-
-
-
-
-
-
+#loading-overlay {
+    display: none;
+    width: 100%;
+    max-width: 1600px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    right: calc((100% - 1600px)/2);
+    background: rgba(0, 0, 0, 0.2);
+}
+#loading-overlay svg {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
