--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,4 +152,23 @@ tr.tr-users{
     overflow: hidden;
 }
 
-c
+#loading-overlay {
+    display: none;
+    width: 100%;
+    max-width: 1600px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    right: calc((100% - 1600px)/2);
+    background: rgba(0, 0, 0, 0.9);
+}
+#loading-overlay svg {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
